; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/wpa/src/wps/extr_httpread.c_httpread_create.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/wpa/src/wps/extr_httpread.c_httpread_create.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.httpread = type { i32, void (%struct.httpread*, i8*, i32)*, i32, i32, i8* }

@httpread_timeout_handler = common dso_local global i32 0, align 4
@EVENT_TYPE_READ = common dso_local global i32 0, align 4
@httpread_read_handler = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.httpread* @httpread_create(i32 %0, {}* %1, i8* %2, i32 %3, i32 %4) #0 {
  %6 = alloca %struct.httpread*, align 8
  %7 = alloca i32, align 4
  %8 = alloca {}*, align 8
  %9 = alloca i8*, align 8
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca %struct.httpread*, align 8
  store i32 %0, i32* %7, align 4
  store {}* %1, {}** %8, align 8
  store i8* %2, i8** %9, align 8
  store i32 %3, i32* %10, align 4
  store i32 %4, i32* %11, align 4
  store %struct.httpread* null, %struct.httpread** %12, align 8
  %13 = call %struct.httpread* @os_zalloc(i32 32)
  store %struct.httpread* %13, %struct.httpread** %12, align 8
  %14 = load %struct.httpread*, %struct.httpread** %12, align 8
  %15 = icmp eq %struct.httpread* %14, null
  br i1 %15, label %16, label %17

16:                                               ; preds = %5
  br label %53

17:                                               ; preds = %5
  %18 = load i32, i32* %7, align 4
  %19 = load %struct.httpread*, %struct.httpread** %12, align 8
  %20 = getelementptr inbounds %struct.httpread, %struct.httpread* %19, i32 0, i32 0
  store i32 %18, i32* %20, align 8
  %21 = load {}*, {}** %8, align 8
  %22 = bitcast {}* %21 to void (%struct.httpread*, i8*, i32)*
  %23 = load %struct.httpread*, %struct.httpread** %12, align 8
  %24 = getelementptr inbounds %struct.httpread, %struct.httpread* %23, i32 0, i32 1
  store void (%struct.httpread*, i8*, i32)* %22, void (%struct.httpread*, i8*, i32)** %24, align 8
  %25 = load i8*, i8** %9, align 8
  %26 = load %struct.httpread*, %struct.httpread** %12, align 8
  %27 = getelementptr inbounds %struct.httpread, %struct.httpread* %26, i32 0, i32 4
  store i8* %25, i8** %27, align 8
  %28 = load i32, i32* %10, align 4
  %29 = load %struct.httpread*, %struct.httpread** %12, align 8
  %30 = getelementptr inbounds %struct.httpread, %struct.httpread* %29, i32 0, i32 2
  store i32 %28, i32* %30, align 8
  %31 = load i32, i32* %11, align 4
  %32 = load %struct.httpread*, %struct.httpread** %12, align 8
  %33 = getelementptr inbounds %struct.httpread, %struct.httpread* %32, i32 0, i32 3
  store i32 %31, i32* %33, align 4
  %34 = load i32, i32* %11, align 4
  %35 = icmp sgt i32 %34, 0
  br i1 %35, label %36, label %43

36:                                               ; preds = %17
  %37 = load i32, i32* %11, align 4
  %38 = load i32, i32* @httpread_timeout_handler, align 4
  %39 = load %struct.httpread*, %struct.httpread** %12, align 8
  %40 = call i64 @eloop_register_timeout(i32 %37, i32 0, i32 %38, i32* null, %struct.httpread* %39)
  %41 = icmp ne i64 %40, 0
  br i1 %41, label %42, label %43

42:                                               ; preds = %36
  br label %53

43:                                               ; preds = %36, %17
  %44 = load i32, i32* %7, align 4
  %45 = load i32, i32* @EVENT_TYPE_READ, align 4
  %46 = load i32, i32* @httpread_read_handler, align 4
  %47 = load %struct.httpread*, %struct.httpread** %12, align 8
  %48 = call i64 @eloop_register_sock(i32 %44, i32 %45, i32 %46, i32* null, %struct.httpread* %47)
  %49 = icmp ne i64 %48, 0
  br i1 %49, label %50, label %51

50:                                               ; preds = %43
  br label %53

51:                                               ; preds = %43
  %52 = load %struct.httpread*, %struct.httpread** %12, align 8
  store %struct.httpread* %52, %struct.httpread** %6, align 8
  br label %56

53:                                               ; preds = %50, %42, %16
  %54 = load %struct.httpread*, %struct.httpread** %12, align 8
  %55 = call i32 @httpread_destroy(%struct.httpread* %54)
  store %struct.httpread* null, %struct.httpread** %6, align 8
  br label %56

56:                                               ; preds = %53, %51
  %57 = load %struct.httpread*, %struct.httpread** %6, align 8
  ret %struct.httpread* %57
}

declare dso_local %struct.httpread* @os_zalloc(i32) #1

declare dso_local i64 @eloop_register_timeout(i32, i32, i32, i32*, %struct.httpread*) #1

declare dso_local i64 @eloop_register_sock(i32, i32, i32, i32*, %struct.httpread*) #1

declare dso_local i32 @httpread_destroy(%struct.httpread*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
